# Chaos-Engine

./: .gitignore  CMakeLists.txt  Steps.txt
assets/shaders/: basic.frag  basic.vert  grid.frag  highlight.frag  ui.vert
lib/glad/include/KHR/: ._khrplatform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/glm/gtx/: ._vec_swizzle.hpp
src/: Camera.h  GameObject.h  Shader.cpp  Shader.h  main.cpp
